WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52361
[GTK] Paint toggle buttons inconsistent when the object state is indeterminate
https://bugs.webkit.org/show_bug.cgi?id=52361
Summary
[GTK] Paint toggle buttons inconsistent when the object state is indeterminate
Carlos Garcia Campos
Reported
2011-01-13 01:25:17 PST
In gtk3 code we never set the flag GTK_STATE_FLAG_INCONSISTENT when rendering check and radio buttons.
Attachments
Check whether the object state is indeterminate
(2.94 KB, patch)
2011-01-13 01:30 PST
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2011-01-13 01:30:57 PST
Created
attachment 78785
[details]
Check whether the object state is indeterminate It also removes an unused variable and moves the code to get the indicator spacing to the isFocused() block since we only need the indicator spacing when the object is focused to inflate the rectangle.
WebKit Review Bot
Comment 2
2011-01-13 02:54:09 PST
Attachment 78785
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/gtk/RenderThemeGtk3.cpp:227: Use 0 instead of NULL. [readability/null] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Xan Lopez
Comment 3
2011-01-13 04:01:32 PST
Comment on
attachment 78785
[details]
Check whether the object state is indeterminate r=me
Carlos Garcia Campos
Comment 4
2011-01-13 04:07:47 PST
Committed
r75710
: <
http://trac.webkit.org/changeset/75710
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug