2011-01-13  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Paint toggle buttons inconsistent when the object state is indeterminate
        https://bugs.webkit.org/show_bug.cgi?id=52361

        Check whether the object state is indeterminate to set the flag
        GTK_STATE_FLAG_INCONSISTENT before rendering check and radio
        buttons.

        * platform/gtk/RenderThemeGtk3.cpp:
        (WebCore::paintToggle):

Canonical link: https://commits.webkit.org/65975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75710 268f45cc-cd09-0410-ab3c-d52691b4dbfc